[project]
name = "any-chat"
version = "0.1.0"
description = "AI Agent Chat Application using Gradio and OpenAI Agents SDK"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "gradio>=5.47.0",
    "openai>=1.109.1", 
    "openai-agents>=0.3.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88